fix #93 content box buttons on mobile

--- a/webApp/src/app/_shared/components/content-box/content-box.component.scss
+++ b/webApp/src/app/_shared/components/content-box/content-box.component.scss
@@ -27,6 +27,7 @@
 
   div[buttons] {
     max-width: 50%;
+    display: flex;
 
     button {
       + button {
